# birbfetcher

./: .env.sample  .gitignore  Cargo.toml  LICENCE  README.adoc  build.gradle.kts  settings.gradle.kts
src/: discord.rs  error.rs  http.rs  main.rs  migrations.rs  reddit.rs  tasks.rs  utils.rs
src/main/java/com/proximyst/birbfetcher/: BirbFetcherConfiguration.java  Constants.java  Main.java
src/main/java/com/proximyst/birbfetcher/api/: RedditApi.java  RedditPost.java  RedditPostType.java
src/main/java/com/proximyst/birbfetcher/http/: RandomImage.java
src/main/java/com/proximyst/birbfetcher/tasks/: PostFetchTask.java  PostProcessTask.java
src/main/java/com/proximyst/birbfetcher/utils/: Functions.java  Hashing.java  TimeMeasurer.java
src/migrations/: 0001-create-tables.sql  0002-add-verified-column.sql  0003-unsigned-id-column.sql
