[package]
name = "birbfetcher"
version = "0.2.5"
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"

thiserror = "1"
anyhow = "1"

log = "0.4"
pretty_env_logger = "0.4"

strum = "0.18"
strum_macros = "0.18"

once_cell = "1.4"

serde_json = "1"

async-timer = "1.0.0-beta.4"
sha2 = "0.9"
hex = "0.4"

futures = "0.3"

serenity = "0.8"

[dependencies.phf]
version = "0.8"
features = [
	"macros",
]

[dependencies.serde]
version = "1"
features = [
	"derive",
]

[dependencies.sqlx]
version = "0.3"
default-features = false
features = [
	"runtime-tokio",
	"mysql",
]

[dependencies.warp]
version = "0.2"
default-features = false

[dependencies.tokio]
version = "0.2"
features = [
	"macros",
	"time",
]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["rustls-tls"]
